# trabalho2da

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
CSV_Files/datasets-extra/: Palletes_01.csv  TruckAndPallets_01.csv
Code/: Brute_Force.h  Dynamic_Programming.h  Greedy.h  Greedy_Method.h  Main.cpp  Menu.cpp  Menu.h  Pallet.h  Truck.h  Write_output.h  readCSV.h
docs/html/: Brute__Force_8h.html  Brute__Force_8h__dep__incl.map  Brute__Force_8h__dep__incl.md5  Brute__Force_8h__incl.map  Brute__Force_8h__incl.md5  Brute__Force_8h_source.html  Dynamic__Programming_8h.html  Dynamic__Programming_8h__dep__incl.map  Dynamic__Programming_8h__dep__incl.md5  Dynamic__Programming_8h__incl.map  Dynamic__Programming_8h__incl.md5  Dynamic__Programming_8h_source.html  Greedy__Method_8h.html  Greedy__Method_8h__dep__incl.map  Greedy__Method_8h__dep__incl.md5  Greedy__Method_8h__incl.map  Greedy__Method_8h__incl.md5  Greedy__Method_8h_source.html  Main_8cpp.html  Main_8cpp__incl.map  Main_8cpp__incl.md5  Menu_8cpp.html  Menu_8cpp__incl.map  Menu_8cpp__incl.md5  Menu_8h.html  Menu_8h__dep__incl.map  Menu_8h__dep__incl.md5  Menu_8h__incl.map  Menu_8h__incl.md5  Menu_8h_source.html  Write__output_8h.html  Write__output_8h__dep__incl.map  Write__output_8h__dep__incl.md5  Write__output_8h__incl.map  Write__output_8h__incl.md5  Write__output_8h_source.html  dir_23fdee2f6995db16c755697cdf620cf4.html  files.html  globals.html  globals_enum.html  (+12 more)
docs/latex/: Brute__Force_8h.tex  Brute__Force_8h__dep__incl.md5  Brute__Force_8h__incl.md5  Brute__Force_8h_source.tex  Dynamic__Programming_8h.tex  (+26 more)
(+52 files in other folders)
